--- a/Scripts/Rpath_scenario8_results.Rmd
+++ b/Scripts/Rpath_scenario8_results.Rmd
@@ -361,3 +361,12 @@ scenario_8_quantiles <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-
   ggsave(width = 8.75, height = 5.25,
   "~/Documents/OTZ.Manuscript/Images/Submission.3/no.diet.combo.jpeg", dpi=600)
 ```
+
+```{r}
+change_1_3 <- change_1_3 %>% mutate(Harvest = "25%")
+change_2_3 <- change_2_3 %>% mutate(Harvest = "50")
+
+ggplot() + geom_point(data= change_1_3, aes(x= biomass_prop, y= reorder(species, biomass_prop))) + geom_point(data= change_2_3, aes(x= biomass_prop, y= reorder(species, biomass_prop))) +
+facet_grid(rows= vars(Harvest),scales="free")
+```
+
